implement server creation command with folder name validation and file download service